# OpenPGPCardEmu

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build-cygwin.sh  reader-cygwin.conf
ArduinoCardEmu/: comm_helper.cpp  comm_helper.h  crc8.cpp  data_buffer.cpp  data_buffer.h  main_loop.cpp  main_loop.h  smart_card.cpp  smart_card.h  value_encoder.cpp  value_encoder.h
OpenCTDriver/: Makefile.am  configure.ac
OpenCTDriver/etc/: openct.conf.in
OpenCTDriver/src/ctapi/: Makefile.am
OpenCTDriver/src/ifd/: Makefile.am  ifd-cardemu.c  init.c  internal.h
PCSC-Lite-CygPort/: .gitignore  build.sh  install.sh  pcsc-lite-1.8.23-custom.cygport  pcsc-lite-1.8.23-custom.src.patch
StandaloneAppSrc/: arduino-defines.h  config.h.in  main.cpp  serial.cpp  serial.h
